# ViennaCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: CUDAUtil.cmake  FindCUDA.cmake  FindOptiX.cmake  compileOptixir.cmake  compilePTX.cmake  cpm.cmake  format.cmake  setCudaFlags.cmake
cmake/FindCUDA/: run_nvcc.cmake
config/: .cmake-format  .cpm-format
include/: logger.hpp  smartPointer.hpp  testAsserts.hpp  timer.hpp  util.hpp  vectorUtil.hpp
include/viennacore/: vcAcceptRejectSampling.hpp  vcAliasSampling.hpp  vcChecks.hpp  vcContext.hpp  vcCudaBuffer.hpp  vcCudaHandle.hpp  vcCudaLoader.hpp  vcInverseTransformSampling.hpp  vcKDTree.hpp  vcLaunchKernel.hpp  vcLogger.hpp  vcOcTree.hpp  vcParameterFile.hpp  vcPhiloxRNG.hpp  vcQueues.hpp  vcRNG.hpp  vcSampling.hpp  vcSamplingMethod.hpp  vcSmartPointer.hpp  vcTestAsserts.hpp  vcTimer.hpp  vcUtil.hpp  vcVectorType.hpp  vcVectorUtil.hpp  vtLogger.hpp  vtSmartPointer.hpp  vtTestAsserts.hpp  vtTimer.hpp  vtUtil.hpp  vtVectorUtil.hpp
include/viennacore/gpu/: vcChecks.hpp  vcContext.hpp  vcCudaBuffer.hpp  vcLaunchKernel.hpp  vcLoadModules.hpp
python/: CMakeLists.txt  __init__.py.in  pyWrap.cpp
tests/: CMakeLists.txt
tests/context/: CMakeLists.txt  context.cpp
tests/cudaBuffer/: CMakeLists.txt  cudaBuffer.cpp
tests/cudaHandle/: CMakeLists.txt  cudaHandle.cpp
tests/kdTree/: CMakeLists.txt  kdTree.cpp
tests/launchKernel/: CMakeLists.txt  kernel.cu  launchKernel.cpp
tests/logger/: CMakeLists.txt  logger.cpp
tests/ocTree/: CMakeLists.txt  ocTree.cpp
tests/openmp/: CMakeLists.txt  openmp.cpp
tests/parameters/: CMakeLists.txt  parameters.cpp
tests/philox/: CMakeLists.txt  philox.cpp
tests/sampling/: CMakeLists.txt  sampling.cpp  samplingBenchmark.cpp  showSamples.ipynb  showSamples.py
tests/vectorUtil/: CMakeLists.txt  vectorUtil.cpp
tools/: cuda_helper.cmake  format.cmake
utils/: CUDAUtil.cmake  batch.cmake  compileOptixir.cmake  compilePTX.cmake  examples.cmake  format.cmake  python.cmake  sanitizer.cmake  setup.cmake  subdirs.cmake
