[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
version = "0.0.1"
name = "ViennaCore_Python"
readme = "README.md"
license = {file = "LICENSE"}
description = "Common functionality found in all ViennaTools libraries"

[project.urls]
Repository = "https://github.com/ViennaTools/ViennaCore"
Issues = "https://github.com/ViennaTools/ViennaCore/issues"

[tool.scikit-build]
build-dir = "build"
cmake.args = ["-DVIENNACORE_BUILD_PYTHON=ON"]
